--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>WebStockExchangeAdministration</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Биржа акций - Администрирование</title>
+    <base href="/">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+  </head>
+  <body class="w3-light-grey">
+    <app-root></app-root>
+  </body>
 </html>
